--- a/baby-products/src/index.css
+++ b/baby-products/src/index.css
@@ -104,19 +104,19 @@
   .list-con2 img {
     width: 30px;
     height: 30px;
+    object-fit: cover;
   }
   /*footer*/
   footer{
     height: 420px;
     width: 100%;
-    background-color: #333;
+    background-color: #c2bbbb;
     display: flex;
     flex-direction: column;
   }
   .info-con{
     height: 320px;
     width: 100%;
-    background-color: aquamarine;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -124,7 +124,6 @@
   .info-div{
     height: 250px;
     width: 280px;
-    background-color: antiquewhite;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -148,6 +147,14 @@
   .social-logo img{
     width: 30px;
     height: 30px;
+  }
+  .copyright-con{
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 13px;
   }
 
   
