--- a/baby-products/src/index.css
+++ b/baby-products/src/index.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0px;
     padding: 0px;
@@ -972,4 +973,42 @@
 
 .logout-button:hover {
   background-color: #ff3333;
+}
+/*------------------------------order page------------------*/
+.order-summary {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+}
+
+.order-summary h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.order-summary h2, .order-summary h3 {
+  margin-bottom: 10px;
+}
+
+.order-summary p {
+  margin-bottom: 5px;
+}
+
+.order-products ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.order-products ul li {
+  margin-bottom: 5px;
+}
+
+.order-total {
+  font-weight: bold;
+  font-size: 1.2em;
+  text-align: right;
+  margin-top: 20px;
 }
