--- a/baby-products/src/index.css
+++ b/baby-products/src/index.css
@@ -6,7 +6,7 @@
   }
   
   body {
-    overflow-x: hidden; 
+    /*overflow-x: hidden; */
     background: linear-gradient(to bottom right, #6a82fb, #fc5c7d);/* Prevent horizontal scroll */
     font-family: 'Arial', sans-serif;
   }
@@ -147,15 +147,15 @@
   }
   
   .info-con {
-    display: flex; /* Use flexbox for layout */
-    justify-content: space-between; /* Space between sections */
-    flex-wrap: wrap; /* Allow wrapping on smaller screens */
-    margin-bottom: 20px; /* Space between the info and copyright */
+    display: flex;
+    justify-content: space-between; 
+    flex-wrap: wrap; 
+    margin-bottom: 20px; 
   }
   
   .info-div {
-    flex: 1; /* Equal flex basis for all info sections */
-    min-width: 200px; /* Minimum width for responsiveness */
+    flex: 1; 
+    min-width: 200px; 
     margin-right: 20px; /* Space between columns */
   }
   
@@ -977,24 +977,37 @@
 /*------------------------------order page------------------*/
 .order-summary {
   max-width: 600px;
-  margin: 20px auto;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  background-color: #f9f9f9;
+  margin: 30px auto;
+  padding: 30px;
+  border: 1px solid #e0e0e0;
+  border-radius: 12px;
+  background-color: #ffffffe1;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  font-family: 'Arial', sans-serif;
 }
 
 .order-summary h1 {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
+  font-size: 2em;
+  color: #333;
+  border-bottom: 2px solid #f1f1f1;
+  padding-bottom: 10px;
 }
 
 .order-summary h2, .order-summary h3 {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+  color: #555;
 }
 
 .order-summary p {
-  margin-bottom: 5px;
+  margin-bottom: 8px;
+  line-height: 1.5;
+  color: #666;
+}
+
+.order-products {
+  margin-bottom: 20px;
 }
 
 .order-products ul {
@@ -1003,12 +1016,24 @@
 }
 
 .order-products ul li {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  background-color: #f7f7f7;
+  transition: background-color 0.3s ease;
+}
+
+.order-products ul li:hover {
+  background-color: #e8f5e9; /* Light green hover effect */
 }
 
 .order-total {
   font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.5em;
   text-align: right;
-  margin-top: 20px;
+  margin-top: 25px;
+  color: #333;
+  border-top: 2px solid #f1f1f1;
+  padding-top: 15px;
 }
